--- a/Dokumentointi/pit/index.html
+++ b/Dokumentointi/pit/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>12</td>
-            <td>31% <div class="coverage_bar"><div class="coverage_complete" style="width:31%"></div><div class="coverage_ledgend">93/304</div></div></td>
-            <td>51% <div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">116/228</div></div></td>
+            <td>13</td>
+            <td>91% <div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">278/307</div></div></td>
+            <td>91% <div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">200/219</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,38 +93,24 @@
     <tbody>
 
         <tr>
-            <td><a href="./com.github.tilastokeskus.matertis/index.html">com.github.tilastokeskus.matertis</a></td>
-            <td>1</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./com.github.tilastokeskus.matertis.action/index.html">com.github.tilastokeskus.matertis.action</a></td>
-            <td>2</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/14</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-        </tr>
-
-        <tr>
             <td><a href="./com.github.tilastokeskus.matertis.core/index.html">com.github.tilastokeskus.matertis.core</a></td>
-            <td>5</td>
-            <td><div class="coveragePercentage">52% </div><div class="coverage_bar"><div class="coverage_complete" style="width:52%"></div><div class="coverage_ledgend">93/178</div></div></td>
-            <td><div class="coveragePercentage">75% </div><div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">116/155</div></div></td>
+            <td>10</td>
+            <td><div class="coveragePercentage">91% </div><div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">258/284</div></div></td>
+            <td><div class="coveragePercentage">92% </div><div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">193/209</div></div></td>
         </tr>
 
         <tr>
-            <td><a href="./com.github.tilastokeskus.matertis.ui/index.html">com.github.tilastokeskus.matertis.ui</a></td>
-            <td>3</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/94</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/58</div></div></td>
+            <td><a href="./com.github.tilastokeskus.matertis.core.command/index.html">com.github.tilastokeskus.matertis.core.command</a></td>
+            <td>2</td>
+            <td><div class="coveragePercentage">85% </div><div class="coverage_bar"><div class="coverage_complete" style="width:85%"></div><div class="coverage_ledgend">11/13</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./com.github.tilastokeskus.matertis.util/index.html">com.github.tilastokeskus.matertis.util</a></td>
             <td>1</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/14</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/10</div></div></td>
+            <td><div class="coveragePercentage">90% </div><div class="coverage_bar"><div class="coverage_complete" style="width:90%"></div><div class="coverage_ledgend">9/10</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">7/7</div></div></td>
         </tr>
 
      </tbody>
