--- a/Dokumentointi/checkstyle/xref/allclasses-frame.html
+++ b/Dokumentointi/checkstyle/xref/allclasses-frame.html
@@ -12,37 +12,52 @@
 
 		<ul>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/button/AbstractButton.html" target="classFrame">AbstractButton</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/core/AbstractGameHandler.html" target="classFrame">AbstractGameHandler</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/AbstractScoreHandler.html" target="classFrame">AbstractScoreHandler</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/action/CloseUIAction.html" target="classFrame">CloseUIAction</a>
+				<a href="com/github/tilastokeskus/matertis/ui/button/ButtonListener.html" target="classFrame">ButtonListener</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/util/Command.html" target="classFrame">Command</a>
+				<a href="com/github/tilastokeskus/matertis/ui/button/ButtonState.html" target="classFrame">ButtonState</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/action/CloseUIAction.html" target="classFrame">CloseUIAction</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/action/CloseUIAndStartGameAction.html" target="classFrame">CloseUIAndStartGameAction</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/Command.html" target="classFrame">Command</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/CommandHandler.html" target="classFrame">CommandHandler</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/listener/CommandListener.html" target="classFrame">CommandListener</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/Difficulty.html" target="classFrame">Difficulty</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Direction.html" target="classFrame">Direction</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/command/DownCommand.html" target="classFrame">DownCommand</a>
+				<a href="com/github/tilastokeskus/matertis/core/command/DropCommand.html" target="classFrame">DropCommand</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/command/DropCommand.html" target="classFrame">DropCommand</a>
+				<a href="com/github/tilastokeskus/matertis/ui/button/LabelButton.html" target="classFrame">EmptyAction</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Game.html" target="classFrame">Game</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/GameHandler.html" target="classFrame">GameHandler</a>
-			</li>
-						<li>
-				<a href="com/github/tilastokeskus/matertis/ui/GameMenu.html" target="classFrame">GameMenu</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/GamePanel.html" target="classFrame">GamePanel</a>
@@ -63,28 +78,34 @@
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">L</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/command/LeftCommand.html" target="classFrame">LeftCommand</a>
+				<a href="com/github/tilastokeskus/matertis/ui/button/LabelButton.html" target="classFrame">LabelButton</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/error/LaunchException.html" target="classFrame">LaunchException</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/Main.html" target="classFrame">Main</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/MenuPanel.html" target="classFrame">MenuPanel</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/MenuUI.html" target="classFrame">MenuUI</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/core/command/MoveCommand.html" target="classFrame">MoveCommand</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">O</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
-			</li>
-						<li>
 				<a href="com/github/tilastokeskus/matertis/core/command/PauseCommand.html" target="classFrame">PauseCommand</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/ui/PreviewPanel.html" target="classFrame">PreviewPanel</a>
+				<a href="com/github/tilastokeskus/matertis/ui/PausePanel.html" target="classFrame">PausePanel</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/core/command/RightCommand.html" target="classFrame">RightCommand</a>
+				<a href="com/github/tilastokeskus/matertis/ui/PreviewPanel.html" target="classFrame">PreviewPanel</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/command/RotateCommand.html" target="classFrame">RotateCommand</a>
@@ -102,10 +123,16 @@
 				<a href="com/github/tilastokeskus/matertis/ui/ScorePanel.html" target="classFrame">ScorePanel</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/SettingsDialog.html" target="classFrame">SettingsDialog</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/SettingsDialog.html" target="classFrame">SettingsListener</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/SettingsManager.html" target="classFrame">SettingsManager</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/action/StartGameAction.html" target="classFrame">StartGameAction</a>
+				<a href="com/github/tilastokeskus/matertis/ui/action/ShowSettingsAction.html" target="classFrame">ShowSettingsAction</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/Tetromino.html" target="classFrame">T</a>
