--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-frame.html
@@ -25,6 +25,9 @@
             	<a href="CommandHandler.html" target="classFrame">CommandHandler</a>
           	</li>
           	          	<li>
+            	<a href="Difficulty.html" target="classFrame">Difficulty</a>
+          	</li>
+          	          	<li>
             	<a href="Direction.html" target="classFrame">Direction</a>
           	</li>
           	          	<li>
@@ -47,9 +50,6 @@
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">O</a>
-          	</li>
-          	          	<li>
-            	<a href="ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
           	</li>
           	          	<li>
             	<a href="Tetromino.html" target="classFrame">S</a>
