--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/package-summary.html
@@ -52,6 +52,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="Difficulty.html" target="classFrame">Difficulty</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Direction.html" target="classFrame">Direction</a>
               		</td>
             	</tr>
@@ -88,11 +93,6 @@
 				            	<tr>
               		<td>
                 		<a href="Tetromino.html" target="classFrame">O</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="ObservableGameHandler.html" target="classFrame">ObservableGameHandler</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -143,7 +143,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2014. All rights reserved.
+			Copyright &#169; 2015. All rights reserved.
 		</div>
 	</body>
 </html>
