--- a/Dokumentointi/checkstyle/xref/overview-frame.html
+++ b/Dokumentointi/checkstyle/xref/overview-frame.html
@@ -19,16 +19,25 @@
 				<a href="com/github/tilastokeskus/matertis/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis</a>
 			</li>
 						<li>
-				<a href="com/github/tilastokeskus/matertis/action/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.action</a>
-			</li>
-						<li>
 				<a href="com/github/tilastokeskus/matertis/core/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.core</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/core/command/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.core.command</a>
 			</li>
 						<li>
+				<a href="com/github/tilastokeskus/matertis/core/error/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.core.error</a>
+			</li>
+						<li>
 				<a href="com/github/tilastokeskus/matertis/ui/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.ui</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/action/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.ui.action</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/button/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.ui.button</a>
+			</li>
+						<li>
+				<a href="com/github/tilastokeskus/matertis/ui/listener/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.ui.listener</a>
 			</li>
 						<li>
 				<a href="com/github/tilastokeskus/matertis/util/package-frame.html" target="packageFrame">com.github.tilastokeskus.matertis.util</a>
