--- a/Dokumentointi/checkstyle/xref/overview-summary.html
+++ b/Dokumentointi/checkstyle/xref/overview-summary.html
@@ -40,11 +40,6 @@
             	</tr>
 	          	            	<tr>
               		<td>
-                		<a href="com/github/tilastokeskus/matertis/action/package-summary.html">com.github.tilastokeskus.matertis.action</a>
-              		</td>
-            	</tr>
-	          	            	<tr>
-              		<td>
                 		<a href="com/github/tilastokeskus/matertis/core/package-summary.html">com.github.tilastokeskus.matertis.core</a>
               		</td>
             	</tr>
@@ -55,7 +50,27 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="com/github/tilastokeskus/matertis/core/error/package-summary.html">com.github.tilastokeskus.matertis.core.error</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="com/github/tilastokeskus/matertis/ui/package-summary.html">com.github.tilastokeskus.matertis.ui</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="com/github/tilastokeskus/matertis/ui/action/package-summary.html">com.github.tilastokeskus.matertis.ui.action</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="com/github/tilastokeskus/matertis/ui/button/package-summary.html">com.github.tilastokeskus.matertis.ui.button</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="com/github/tilastokeskus/matertis/ui/listener/package-summary.html">com.github.tilastokeskus.matertis.ui.listener</a>
               		</td>
             	</tr>
 	          	            	<tr>
@@ -85,7 +100,7 @@
 		
 		<hr />
 		<div id="footer">
-			Copyright &#169; 2014. All rights reserved.
+			Copyright &#169; 2015. All rights reserved.
 		</div>
 	</body>
 </html>
