--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/error/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/core/error/package-summary.html
@@ -3,14 +3,14 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.action</title>
-		<link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="style" />
+		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.core.error</title>
+		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -18,7 +18,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package com.github.tilastokeskus.matertis.action</h2>
+		      	<h2>Package com.github.tilastokeskus.matertis.core.error</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,12 +37,7 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="CloseUIAction.html" target="classFrame">CloseUIAction</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="StartGameAction.html" target="classFrame">StartGameAction</a>
+                		<a href="LaunchException.html" target="classFrame">LaunchException</a>
               		</td>
             	</tr>
 				        	</tbody>
@@ -51,7 +46,7 @@
 		      	<div class="overview">
         	<ul>
           		<li>
-            		<a href="../../../../../overview-summary.html">Overview</a>
+            		<a href="../../../../../../overview-summary.html">Overview</a>
           		</li>
           		<li class="selected">Package</li>
         	</ul>
@@ -59,7 +54,7 @@
       	<div class="framenoframe">
         	<ul>
           		<li>
-            		<a href="../../../../../index.html" target="_top">FRAMES</a>
+            		<a href="../../../../../../index.html" target="_top">FRAMES</a>
           		</li>
           		<li>
             		<a href="package-summary.html" target="_top">NO FRAMES</a>
@@ -68,7 +63,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2014. All rights reserved.
+			Copyright &#169; 2015. All rights reserved.
 		</div>
 	</body>
 </html>
