--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/button/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/button/package-frame.html
@@ -3,32 +3,32 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.core.command</title>
+		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.ui.button</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 
 		<h3>
-        	<a href="package-summary.html" target="classFrame">com.github.tilastokeskus.matertis.core.command</a>
+        	<a href="package-summary.html" target="classFrame">com.github.tilastokeskus.matertis.ui.button</a>
       	</h3>
 
       	<h3>Classes</h3>
 
       	<ul>
       		          	<li>
-            	<a href="Command.html" target="classFrame">Command</a>
+            	<a href="AbstractButton.html" target="classFrame">AbstractButton</a>
           	</li>
           	          	<li>
-            	<a href="DropCommand.html" target="classFrame">DropCommand</a>
+            	<a href="ButtonListener.html" target="classFrame">ButtonListener</a>
           	</li>
           	          	<li>
-            	<a href="MoveCommand.html" target="classFrame">MoveCommand</a>
+            	<a href="ButtonState.html" target="classFrame">ButtonState</a>
           	</li>
           	          	<li>
-            	<a href="PauseCommand.html" target="classFrame">PauseCommand</a>
+            	<a href="LabelButton.html" target="classFrame">EmptyAction</a>
           	</li>
           	          	<li>
-            	<a href="RotateCommand.html" target="classFrame">RotateCommand</a>
+            	<a href="LabelButton.html" target="classFrame">LabelButton</a>
           	</li>
           	      	</ul>
 
