--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/listener/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/listener/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.core.command</title>
+		<title>Matertis 1.0-SNAPSHOT Reference Package com.github.tilastokeskus.matertis.ui.listener</title>
 		<link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package com.github.tilastokeskus.matertis.core.command</h2>
+		      	<h2>Package com.github.tilastokeskus.matertis.ui.listener</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,27 +37,7 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Command.html" target="classFrame">Command</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="DropCommand.html" target="classFrame">DropCommand</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="MoveCommand.html" target="classFrame">MoveCommand</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="PauseCommand.html" target="classFrame">PauseCommand</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="RotateCommand.html" target="classFrame">RotateCommand</a>
+                		<a href="CommandListener.html" target="classFrame">CommandListener</a>
               		</td>
             	</tr>
 				        	</tbody>
