--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-frame.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-frame.html
@@ -16,16 +16,19 @@
 
       	<ul>
       		          	<li>
-            	<a href="GameMenu.html" target="classFrame">GameMenu</a>
-          	</li>
-          	          	<li>
             	<a href="GamePanel.html" target="classFrame">GamePanel</a>
           	</li>
           	          	<li>
             	<a href="GameUI.html" target="classFrame">GameUI</a>
           	</li>
           	          	<li>
+            	<a href="MenuPanel.html" target="classFrame">MenuPanel</a>
+          	</li>
+          	          	<li>
             	<a href="MenuUI.html" target="classFrame">MenuUI</a>
+          	</li>
+          	          	<li>
+            	<a href="PausePanel.html" target="classFrame">PausePanel</a>
           	</li>
           	          	<li>
             	<a href="PreviewPanel.html" target="classFrame">PreviewPanel</a>
@@ -35,6 +38,12 @@
           	</li>
           	          	<li>
             	<a href="ScorePanel.html" target="classFrame">ScorePanel</a>
+          	</li>
+          	          	<li>
+            	<a href="SettingsDialog.html" target="classFrame">SettingsDialog</a>
+          	</li>
+          	          	<li>
+            	<a href="SettingsDialog.html" target="classFrame">SettingsListener</a>
           	</li>
           	          	<li>
             	<a href="UI.html" target="classFrame">UI</a>
