--- a/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-summary.html
+++ b/Dokumentointi/checkstyle/xref/com/github/tilastokeskus/matertis/ui/package-summary.html
@@ -37,11 +37,6 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="GameMenu.html" target="classFrame">GameMenu</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
                 		<a href="GamePanel.html" target="classFrame">GamePanel</a>
               		</td>
             	</tr>
@@ -52,7 +47,17 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="MenuPanel.html" target="classFrame">MenuPanel</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="MenuUI.html" target="classFrame">MenuUI</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="PausePanel.html" target="classFrame">PausePanel</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -68,6 +73,16 @@
 				            	<tr>
               		<td>
                 		<a href="ScorePanel.html" target="classFrame">ScorePanel</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="SettingsDialog.html" target="classFrame">SettingsDialog</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="SettingsDialog.html" target="classFrame">SettingsListener</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -98,7 +113,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2014. All rights reserved.
+			Copyright &#169; 2015. All rights reserved.
 		</div>
 	</body>
 </html>
