--- a/Dokumentointi/pit/com.github.tilastokeskus.matertis.core.command/PauseCommand.java.html
+++ b/Dokumentointi/pit/com.github.tilastokeskus.matertis.core.command/PauseCommand.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_1'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_2'></a>
 </td>
 <td class=''><pre><span  class=''>package com.github.tilastokeskus.matertis.core.command;</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_3'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_4'></a>
 </td>
 <td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.core.GameHandler;</span></pre></td></tr>
 
@@ -103,23 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_5'></a>
-</td>
-<td class=''><pre><span  class=''>import com.github.tilastokeskus.matertis.util.Command;</span></pre></td></tr>
-
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_6'/>
-6
-</td>
-<td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_5'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -127,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_7'/>
-7
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_6'/>
+6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_6'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -139,23 +127,35 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_8'/>
-8
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_7'/>
+7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_7'></a>
 </td>
-<td class=''><pre><span  class=''> * Command to toggle the pause state of a game.</span></pre></td></tr>
+<td class=''><pre><span  class=''> * Command to toggle the pause state of a game. Command is not executed if game</span></pre></td></tr>
 
 
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_8'/>
+8
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_8'></a>
+</td>
+<td class=''><pre><span  class=''> * is over.</span></pre></td></tr>
+
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_9'></a>
 </td>
 <td class=''><pre><span  class=''> * </span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_10'></a>
 </td>
 <td class=''><pre><span  class=''> * @author tilastokeskus</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_11'></a>
 </td>
 <td class=''><pre><span  class=''> * @see    Tetromino</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_12'></a>
 </td>
 <td class=''><pre><span  class=''> * @see    GameHandler</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_13'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_14'/>
 14
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_14'></a>
 </td>
 <td class=''><pre><span  class=''>public class PauseCommand implements Command {</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_15'/>
 15
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_15'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_16'></a>
 </td>
 <td class=''><pre><span  class=''>    private final GameHandler gameHandler;</span></pre></td></tr>
 
@@ -247,11 +247,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_17'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -259,11 +259,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_18'/>
 18
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_18'></a>
 </td>
 <td class=''><pre><span  class=''>    /**</span></pre></td></tr>
 
@@ -271,11 +271,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_19'/>
 19
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_19'></a>
 </td>
 <td class=''><pre><span  class=''>     * Constructs a pause command with the given game handler.</span></pre></td></tr>
 
@@ -283,11 +283,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_20'/>
 20
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_20'></a>
 </td>
 <td class=''><pre><span  class=''>     * @param gameHandler Game handler to be paused and resumed.</span></pre></td></tr>
 
@@ -295,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_21'/>
 21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_21'></a>
 </td>
 <td class=''><pre><span  class=''>     */</span></pre></td></tr>
 
@@ -307,11 +307,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_22'/>
 22
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_22'></a>
 </td>
 <td class='covered'><pre><span  class=''>    public PauseCommand(GameHandler gameHandler) {</span></pre></td></tr>
 
@@ -319,11 +319,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_23'/>
 23
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_23'></a>
 </td>
 <td class='covered'><pre><span  class=''>        this.gameHandler = gameHandler;</span></pre></td></tr>
 
@@ -331,11 +331,11 @@ padding-left: 5px;
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_24'/>
 24
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_24'></a>
 </td>
 <td class='covered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -343,11 +343,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_25'/>
 25
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_25'></a>
 </td>
 <td class=''><pre><span  class=''>    </span></pre></td></tr>
 
@@ -355,11 +355,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_26'/>
 26
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_26'></a>
 </td>
 <td class=''><pre><span  class=''>    /**</span></pre></td></tr>
 
@@ -367,11 +367,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_27'/>
 27
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_27'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_27'></a>
 </td>
 <td class=''><pre><span  class=''>     * Toggles the game handler&#39;s pause state.</span></pre></td></tr>
 
@@ -379,11 +379,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_28'/>
 28
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_28'></a>
 </td>
 <td class=''><pre><span  class=''>     */</span></pre></td></tr>
 
@@ -391,11 +391,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_29'/>
 29
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_29'></a>
 </td>
 <td class=''><pre><span  class=''>    @Override</span></pre></td></tr>
 
@@ -403,11 +403,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_30'/>
 30
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_30'></a>
 </td>
 <td class=''><pre><span  class=''>    public void execute() {</span></pre></td></tr>
 
@@ -415,23 +415,47 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_31'/>
 31
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_31'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_31'>1</a>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        gameHandler.togglePause();</span></pre></td></tr>
+<td class='uncovered'><pre><span  class='survived'>        if (!gameHandler.getGame().isGameOver()) {</span></pre></td></tr>
 
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_32'/>
 32
 </td>
+<td class='survived'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_32'>1</a>
+</td>
+<td class='uncovered'><pre><span  class='survived'>            gameHandler.togglePause();</span></pre></td></tr>
+
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_33'/>
+33
+</td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_33'></a>
+</td>
+<td class=''><pre><span  class=''>        }</span></pre></td></tr>
+
+
+
+<tr>
+<td class='uncovered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_34'/>
+34
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_34'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -439,11 +463,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_33'/>
-33
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_35'/>
+35
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_33'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_35'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -451,11 +475,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@13d3589e_34'/>
-34
+<a name='org.pitest.mutationtest.report.html.SourceFile@b6c1c07_36'/>
+36
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_34'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_36'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -466,11 +490,22 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@13d3589e_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b6c1c07_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@13d3589e_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_31'/> 
+
+<p class='NO_COVERAGE'>negated conditional : NO_COVERAGE</p> 
+</td>
+</tr>
+
+<tr>
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@b6c1c07_32'>32</a></td> 
+<td></td>
+<td>
+
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@b6c1c07_32'/> 
 
 <p class='NO_COVERAGE'>removed call to com/github/tilastokeskus/matertis/core/GameHandler::togglePause : NO_COVERAGE</p> 
 </td>
